Set working directory for TFlint

--- a/.github/workflows/tflint.yml
+++ b/.github/workflows/tflint.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   tflint:
     runs-on: ${{ matrix.os }}
+    defaults:
+        run:
+            working-directory: ./terraform
 
     strategy:
       matrix:
