--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -9,6 +9,7 @@ permissions:
   contents: read
 
 jobs:
+
   terraform:
     name: 'Terraform'
     runs-on: ubuntu-latest
@@ -25,18 +26,16 @@ jobs:
 
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v1
-      with:
-        cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+      uses: hashicorp/setup-terraform@v3
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
-      run: terraform init
+      run: terraform -chdir="./terraform" init
 
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
-      run: terraform fmt -check
+      run: terraform -chdir="./terraform" fmt -check
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform -chdir="./terraform plan -input=false"
+      run: terraform -chdir="./terraform" plan -input=false
