--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -18,6 +18,7 @@ jobs:
     defaults:
       run:
         shell: bash
+        working-directory: ${{env.tf_actions_working_dir}}        
 
     steps:
     # Checkout the repository to the GitHub Actions runner
