Configure default working-directory

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -5,6 +5,10 @@ on:
     branches: [ 'main' ]
   pull_request:
 
+defaults:
+  run:
+    working-directory: ${{ env.tf_actions_working_dir }}
+
 permissions:
   contents: read
 
@@ -18,7 +22,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: ${{env.tf_actions_working_dir}}        
+          
 
     steps:
     # Checkout the repository to the GitHub Actions runner
