--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -7,7 +7,7 @@ on:
 
 defaults:
   run:
-    working-directory: ${{ env.tf_actions_working_dir }}
+    working-directory: "./terraform"
 
 permissions:
   contents: read
