--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -5,10 +5,6 @@ on:
     branches: [ 'main' ]
   pull_request:
 
-defaults:
-  run:
-    working-directory: "./terraform"
-
 permissions:
   contents: read
 
@@ -41,8 +37,8 @@ jobs:
 
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
-      run: terraform fmt -check
+      run: terraform -chdir="./terraform -fmt -check"
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan -input=false
+      run: terraform -chdir="./terraform plan -input=false"
