--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -45,4 +45,7 @@ jobs:
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: terraform -chdir="./terraform" plan -input=false
