--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -46,6 +46,6 @@ jobs:
     # Generates an execution plan for Terraform
     - name: Terraform Plan
       env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        TF_VAR_AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        TF_VAR_AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: terraform -chdir="./terraform" plan -input=false
