--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -48,4 +48,4 @@ jobs:
       env:
         TF_VAR_AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         TF_VAR_AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: terraform -chdir="./terraform" plan -input=false
+      run: terraform -chdir="./terraform" plan -input=false -var-file="${{ inputs.var-file }}" -var="AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" -var="AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}"
