--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -17,7 +17,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working_directory: ./terraform
+        working-directory: ./terraform
           
 
     steps:
