Add TFlint to Pre-commit
Signed-off-by: Shehzad <shehzadashiq@hotmail.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,5 +2,6 @@ repos:
 - repo: https://github.com/antonbabenko/pre-commit-terraform
   rev: v1.96.1 # Get the latest from: https://github.com/antonbabenko/pre-commit-terraform/releases
   hooks:
-    - id: terraform_fmt
     - id: terraform_docs
+    - id: terraform_fmt
+    - id: terraform_tflint
