Update S3 BucketName in backend-resources.yaml
Signed-off-by: Shehzad <shehzadashiq@hotmail.com>

--- a/cfn/backend-resources.yaml
+++ b/cfn/backend-resources.yaml
@@ -5,7 +5,7 @@ Parameters:
   S3BucketName:
     Type: String
     Description: The name of the S3 bucket to be created for storing Terraform state files.
-    Default: gitops-tf-backend
+    Default: gitops-tf-backend-shehzadashiq
 
   DynamoDBTableName:
     Type: String
