Add Apply step in Terraform Github Action
Signed-off-by: Shehzad <shehzadashiq@hotmail.com>

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -49,3 +49,7 @@ jobs:
     # Generates an execution plan for Terraform
     - name: Terraform Plan
       run: terraform plan -input=false
+
+    # Apply the Configuration
+    - name: Terraform Apply
+      run: terraform apply -input=false -auto-approve
