--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,13 @@
+---
 repos:
-- repo: https://github.com/antonbabenko/pre-commit-terraform
-  rev: v1.96.1 # Get the latest from: https://github.com/antonbabenko/pre-commit-terraform/releases
-  hooks:
-    - id: terraform_docs
-    - id: terraform_fmt
-    - id: terraform_tflint
+  - repo: https://github.com/antonbabenko/pre-commit-terraform
+    rev: v1.96.1 # Get the latest from: https://github.com/antonbabenko/pre-commit-terraform/releases
+    hooks:
+      - id: terraform_docs
+      - id: terraform_fmt
+      - id: terraform_tflint
+  - repo: https://github.com/adrienverge/yamllint.git
+    rev: v1.29.0
+    hooks:
+      - id: yamllint
+        # args: [--strict, -c=/path/to/.yamllint]
