--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -60,7 +60,8 @@ jobs:
                                      --repo=$GITHUB_REPOSITORY \
                                      --github-token=${{ github.token }} \
                                      --pull-request=${{ github.event.pull_request.number }} \
-                                     --behavior=update
+                                     --behavior=update \
+                                     --policy-path ./policies/cost.rego
 
   # Run Infracost on default branch and update Infracost Cloud
   infracost-default-branch-update:
