--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -9,6 +9,8 @@ on:
     secrets:
       ROLE_TO_ASSUME:
         required: true
+      cli_config_credentials_token:
+        required: false
 
 permissions:
   contents: read
