--- a/.github/workflows/drift.yml
+++ b/.github/workflows/drift.yml
@@ -14,4 +14,4 @@ jobs:
       pull-requests: write
     secrets:
       ROLE_TO_ASSUME: ${{ secrets.ROLE_TO_ASSUME }}
-      # cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+      cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
