--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -55,6 +55,7 @@ jobs:
 
       # Generates an execution plan for Terraform
       - name: Terraform Plan
-        run: terraform plan -input=false
-             terraform show -json plan.tfplan > /tmp/plan.json
-             cat /tmp/plan.json
+        run: |
+          terraform plan -input=false
+          terraform show -json plan.tfplan > /tmp/plan.json
+          cat /tmp/plan.json
