--- a/.github/workflows/drift.yml
+++ b/.github/workflows/drift.yml
@@ -1,17 +1,51 @@
 ---
-name: 'Drift Detection'
+name: 'Drift Detection Alternate'
 
 on:
   schedule:
     - cron: '*/30 * * * *'
 
+permissions:
+  contents: read
+  id-token: write
+
 jobs:
-  detect_drift:
-    uses: ./.github/workflows/plan.yml
-    permissions:
-      contents: read
-      id-token: write
-      pull-requests: write
-    secrets:
-      ROLE_TO_ASSUME: ${{ secrets.ROLE_TO_ASSUME }}
-      cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+
+  terraform:
+    name: 'Terraform'
+    runs-on: ubuntu-latest
+    environment: production
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./terraform
+
+    steps:
+      # Use OIDC Role to checkout the repository with the Github Actions Runner
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-region: eu-west-2
+          role-to-assume: ${{ secrets.ROLE_TO_ASSUME }}
+
+      # Checkout the repository to the GitHub Actions runner
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+
+      # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+      - name: Terraform Init
+        run: terraform init
+
+      # Checks that all Terraform configuration files adhere to a canonical format
+      - name: Terraform Format
+        run: terraform fmt -check
+
+      # Generates an execution plan for Terraform
+      - name: Terraform Plan
+        run: terraform plan -input=false
