Require TF_API_TOKEN in Terraform plan
Signed-off-by: Shehzad <shehzadashiq@hotmail.com>

--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -10,7 +10,7 @@ on:
       ROLE_TO_ASSUME:
         required: true
       cli_config_credentials_token:
-        required: false
+        required: true
 
 permissions:
   contents: read
