--- a/.github/workflows/drift.yml
+++ b/.github/workflows/drift.yml
@@ -3,7 +3,8 @@ name: 'Drift Detection'
 
 on:
   schedule:
-    - cron: '*/30 * * * *'
+    - cron: '*/5 * * * *'
+    # - cron: '0 0 * * *'
 
 permissions:
   contents: read
@@ -41,10 +42,6 @@ jobs:
       # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
       - name: Terraform Init
         run: terraform init
-
-      # Checks that all Terraform configuration files adhere to a canonical format
-      - name: Terraform Format
-        run: terraform fmt -check
 
       # Generates an execution plan for Terraform
       - name: Terraform Plan
