--- a/.github/workflows/drift_terraform_plan.yml
+++ b/.github/workflows/drift_terraform_plan.yml
@@ -60,3 +60,36 @@ jobs:
             echo "Drift detected!"
             echo "DRIFT=true" >> $GITHUB_ENV
           fi
+
+      # Create Issue if Drift is Detected
+      - name: Create Issue if Drift Detected
+        if: env.DRIFT == 'true'
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const issueTitle = 'Terraform Drift Detected';
+            const issueBody = `Terraform drift has been detected in the infrastructure.\n\n
+                               Please review the details in the latest Terraform plan output.`;
+
+            const existingIssues = await github.rest.issues.listForRepo({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              state: 'open',
+            });
+
+            if (!existingIssues.data.some(issue => issue.title === issueTitle)) {
+              await github.rest.issues.create({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                title: issueTitle,
+                body: issueBody,
+              });
+            }
+
+      # Upload Plan Output (Optional, for Review)
+      - name: Upload Plan Output
+        if: env.DRIFT == 'true'
+        uses: actions/upload-artifact@v4
+        with:
+          name: terraform-drift-plan
+          path: ./terraform/plan.txt
