--- a/.github/workflows/portcheck.yml
+++ b/.github/workflows/portcheck.yml
@@ -3,7 +3,8 @@ name: Check Port Accessibility
 
 on:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '0 0 * * *'  # Runs daily at midnight (UTC)
+    # - cron: '*/5 * * * *'
   workflow_dispatch:
 
 permissions:
