--- a/.github/workflows/drift_terraform_plan.yml
+++ b/.github/workflows/drift_terraform_plan.yml
@@ -71,7 +71,8 @@ jobs:
         id: extract-plan
         run: |
           # Extract lines showing changes only
-          grep -A 5 'Plan:' plan.txt > drift_details.txt
+          # grep -A 5 'Plan:' plan.txt > drift_details.txt
+          grep -A 5 'Plan:' ./terraform/plan.txt > drift_details.txt || echo "No specific changes found in plan."
           # Convert to a GitHub-friendly format
           # echo "DRIFT_DETAILS=$(cat drift_details.txt | sed 's/$/  /' | tr '\n' '\\n')" >> $GITHUB_ENV
           if [ -s drift_details.txt ]; then
