Change grep statement
Signed-off-by: Shehzad <shehzadashiq@hotmail.com>

--- a/.github/workflows/drift_terraform_plan.yml
+++ b/.github/workflows/drift_terraform_plan.yml
@@ -53,7 +53,8 @@ jobs:
         id: plan
         run: |
           terraform plan -refresh-only -no-color > plan.txt
-          if grep -q "No changes. Infrastructure is up-to-date." plan.txt; then
+          # if grep -q "No changes. Infrastructure is up-to-date." plan.txt; then
+          if grep -q "Plan: 0 to add, 0 to change, 0 to destroy." plan.txt; then
             echo "No drift detected."
             echo "DRIFT=false" >> $GITHUB_ENV
           else
