--- a/.github/workflows/drift_terraform_plan.yml
+++ b/.github/workflows/drift_terraform_plan.yml
@@ -54,8 +54,9 @@ jobs:
         run: |
           # terraform plan -refresh-only -no-color > plan.txt
           terraform plan -input=false > plan.txt
+          if grep -q "0 to add, 0 to change, 0 to destroy" plan.txt; the
           # if grep -q "No changes. Infrastructure is up-to-date." plan.txt; then
-          if grep -q "Plan: 0 to add, 0 to change, 0 to destroy." plan.txt; then
+          # if grep -q "Plan: 0 to add, 0 to change, 0 to destroy." plan.txt; then
             echo "No drift detected."
             echo "DRIFT=false" >> $GITHUB_ENV
           else
