Fix terraform plan statement
Signed-off-by: Shehzad <shehzadashiq@hotmail.com>

--- a/.github/workflows/drift_terraform_plan.yml
+++ b/.github/workflows/drift_terraform_plan.yml
@@ -52,8 +52,7 @@ jobs:
       - name: Terraform Plan (Refresh Only)
         id: plan
         run: |
-          terraform plan -refresh-only -no-color > plan.txt
-          # terraform plan -input=false > plan.txt
+          terraform plan -input=false > plan.txt
           if grep -q "0 to add, 0 to change, 0 to destroy" plan.txt; then
             echo "No drift detected."
             echo "DRIFT=false" >> $GITHUB_ENV
