Add manual workflows for actions for testing
Signed-off-by: Shehzad <shehzadashiq@hotmail.com>

--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -3,6 +3,7 @@ name: 'Run Infracost'
 on:
   pull_request:
     types: [opened, synchronize, closed]
+  workflow_dispatch:
 
 jobs:
   infracost-pull-request-checks:
@@ -12,7 +13,7 @@ jobs:
     environment: production
     permissions:
       contents: read
-      pull-requests: write # Required to post comments
+      pull-requests: write   # Required to post comments
 
     steps:
       - name: Setup Infracost
