--- a/.github/workflows/drift_terraform_cloud.yml
+++ b/.github/workflows/drift_terraform_cloud.yml
@@ -7,6 +7,7 @@ name: 'Drift Detection - Terraform Cloud'
 
 
 on:
+  workflow_dispatch:
   schedule:
     # - cron:  '0 * * * *' # Every hour.
     # - cron: '*/5 * * * *'
