Revert changes accidentally rolled back
Signed-off-by: Shehzad <shehzadashiq@hotmail.com>

--- a/.github/workflows/drift_terraform_cloud.yml
+++ b/.github/workflows/drift_terraform_cloud.yml
@@ -1,4 +1,6 @@
 ---
+# This version of drift detection does not work with Terraform cloud
+# as it requires remote execution which causes other actions to fail
 # https://github.com/marketplace/actions/terraform-cloud-enterprise-drift-detection
 # https://github.com/slok/tfe-drift
 name: 'Drift Detection - Terraform Cloud'
@@ -8,7 +10,8 @@ on:
   workflow_dispatch:
   schedule:
     # - cron:  '0 * * * *' # Every hour.
-    - cron: '*/5 * * * *'
+    # - cron: '*/5 * * * *'
+    - cron: '0 0 * * *'  # Runs daily at midnight (UTC)
 
 jobs:
   drift-detection:
