--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ repos:
     hooks:
       - id: terraform_docs
       - id: terraform_fmt
-      - id: terraform_tflint
+      # - id: terraform_tflint
   - repo: https://github.com/adrienverge/yamllint.git
     rev: v1.29.0
     hooks:
