Modify run TFlint action to continue on failure
Signed-off-by: Shehzad <shehzadashiq@hotmail.com>

--- a/.github/workflows/tflint.yml
+++ b/.github/workflows/tflint.yml
@@ -49,6 +49,7 @@ jobs:
           else
             echo "TFLINT_FAILED=false" >> $GITHUB_ENV
           fi
+        continue-on-error: true
 
       - name: Comment on PR with TFLint Issues
         if: env.TFLINT_FAILED == 'true' && github.event_name == 'pull_request'
