--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 ---
 repos:
   - repo: https://github.com/antonbabenko/pre-commit-terraform
-    rev: v1.96.1 # Get the latest from: https://github.com/antonbabenko/pre-commit-terraform/releases
+    rev: v1.96.1  # Get the latest from: https://github.com/antonbabenko/pre-commit-terraform/releases
     hooks:
       - id: terraform_docs
       - id: terraform_fmt
@@ -10,4 +10,12 @@ repos:
     rev: v1.29.0
     hooks:
       - id: yamllint
-        # args: [--strict, -c=/path/to/.yamllint]
+      # args: [--strict, -c=/path/to/.yamllint]
+  - repo: https://github.com/igorshubovych/markdownlint-cli
+    rev: v0.41.0
+    hooks:
+      - id: markdownlint
+        args: [--disable=MD013]
+        # args: [--disable=MD013,--disable=MD002,--disable=MD032,--disable=MD005,--disable=MD009 ]
+        # See https://pre-commit.com for more information
+        # See https://pre-commit.com/hooks.html for more hooks
