--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -5,3 +5,10 @@
   entry: yamllint
   language: python
   types: [file, yaml]
+
+- id: markdownlint
+  name: Markdownlint
+  description: Run markdownlint on your Markdown files
+  entry: mdl
+  language: ruby
+  files: \.(md|mdown|markdown)$
