--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 ---
 repos:
   - repo: https://github.com/antonbabenko/pre-commit-terraform
-    rev: v1.96.1  # Get the latest from: https://github.com/antonbabenko/pre-commit-terraform/releases
+    rev: v1.96.2  # Get the latest from: https://github.com/antonbabenko/pre-commit-terraform/releases
     hooks:
       - id: terraform_docs
       - id: terraform_fmt
@@ -10,7 +10,7 @@ repos:
     rev: v1.29.0
     hooks:
       - id: yamllint
-      # args: [--strict, -c=/path/to/.yamllint]
+        args: [--strict, -c=.yamllint]
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.41.0
     hooks:
